# drama-box

./: constant.py  main.py  pyproject.toml
data/: movies.csv
